--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.46.1",
     "gsap": "^3.12.5",
     "motion": "^11.11.17",
     "react": "^18.3.1",
