--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@supabase/supabase-js": "^2.46.1",
+    "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
     "motion": "^11.11.17",
     "react": "^18.3.1",
@@ -23,6 +26,8 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slick": "^0.23.13",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
